 - fix: segment data via `AFMData.appr` and `AFMData.retr` did not
   use user-defined data to identify segments, but the "segment"
   column from the raw data (this does not affect PyJibe or nanite which
   fo not make excessive use of these properties)
 - enh: add "segment count" key to meta data
 - enh: optimize segment handling: new class AFMSegment that caches
   segment indices (#16)
0.15.0
 - feat: generally support creep-compliance and stress-relaxation data
   via the new "modalities" (supercedes "modality") recipe key
 - feat: support for JPK creep-compliance data
 - enh: extract segment duration from JPK files
 - fix: ignore NaN values in JPK property files
 - ref: add separate meta data section for modality-related keys
 - ref: improvements of JPK metadata reader
 - tests: rename test data files to reflect format
0.14.4
 - docs: add section for implementing new file formats (#13)
 - fix: IndexError when trying to open .txt files that are no AFM files
 - ref: separate submodule for formats
0.14.3
 - enh: implement LazyMetaValue to speed-up loading JPK files
 - enh: perform caching in LazyData (minor speed-up)
0.14.2
 - fix: partially revert breaking change in 0.14.0 ("imaging mode"
   was previously used when exporting data in PyJibe and this metadata
   key should not change)
 - fix: add detect function for HDF5 format (afmformats attempted to
   load nanite rating containers)
 - enh: added height span for QMap data
 - tests: add .tab and .h5 test files
 - ref: renamed QMap feature "lowest height" to "height base point"
 - ref: changed prefix to "data" for all QMap data
0.14.1
 - fix: populate AFMQMap grid metadata for AFM workshop format (#12)
 - enh: speed-up QMap computation by decorator-based caching
 - ref: move QMap grid index computation to MetaData class
0.14.0
 - BREAKING CHANGE: changed 'mode' to 'modality' throughout afmformats
 - feat: introduced afmformats.AFMGroup, a container for AFMData (#11)